assets/css/style.css
/* ... */
.cta-btn {
    position: relative;
    text-align: right;
    margin-right: 10%;
    margin-top: -8%;
}

.button {
    cursor: pointer;
    color: whitesmoke;
    background-color: #383838;
    padding: .9em 2em;
    border-radius: 25px;
    border: 2px solid #383838;
    font-size: 0.9rem;
    text-transform: uppercase;
    text-decoration: none;

}

.button:hover {
    color: #383838;
    background-color: whitesmoke;
    border: 2px solid red;
    transition: 0.5s;
}

/*--------------------Video Section Styling---------------------*/

.video-section {
    position: relative;
    width: 80%;
    margin: 10% auto 2%;
    left: 0;
    padding-bottom: 0;
}

.video-section video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 15px;
    filter: grayscale(70%);
}

/*---------------------Second Page Slogan Styling-----------------------*/

.second-page-text {
    position: relative;
    width: 80%;
    height: 100%;
    display: flex;
    align-items: center;
    margin: 0 auto;
}

.second-page h1 {
    font-size: 8rem;
    font-weight: 400;
    text-transform: uppercase;
    text-align: center;  
    padding: 2em 0;
}

@keyframes scroll-reveal {
    to {
        background-size: 100% 100%;
    }
}

/*---------------------------About Section Styling--------------------------*/

#about {

    background-color: #383838;
    width: 97%;
    height: 170vh;
    margin: 0 auto;
}

.container {
    display: flex;
    margin-left: 10%;
    margin-top: -2%;

}

.about-img {

    width: 600px;
    height: 440px;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 65px;
}

.about-img img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
}

.furniture-maker {
    object-fit: cover;
    filter: grayscale(100%);
}

#about-heading {
    font-size: 6rem;
    color: whitesmoke;
    font-weight: 400;
    text-transform: uppercase;
    padding: 10% 0 0 0%;
    margin-left: 3%;
    text-align: right;
    width: 700px;
}

#about-heading span {
    color: red;
    font-size: 7rem;
}

h2 {
    font-family: sans-serif;
    font-size: 2.5rem;
    font-weight: 500;
    line-height: 2.5;
    text-transform: uppercase;
    color: whitesmoke;   
}


.about-text-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 60%;
    margin-left: 10%;
}

.about-text {
    line-height: 1.7;
    font-size: .75rem;
    text-transform: uppercase;
    color: whitesmoke;
    width: 400px;
    font-weight: 200;
    font-family: sans-serif;

}

.brand-font {
    text-transform: capitalize;
    font-size: 1rem;
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
}

.circle {
    position: relative;
    width: 150px;
    height: 150px;
    background-color: red;
    border-radius: 50%;
    top: -200px;
    margin: 0 0 0 70%;
}

/*-------------------------------Product Page Styling-------------------------------*/

.product-page-container {
    text-align: center;
}

.product-title-text span {
    color: red;
    font-size: 2rem;
}

.product-title-text {
    padding-top: 20px;
    font-size: 1.7rem;
    font-family: 'Poppins' sans-serif;
    font-weight: 400;
    text-transform: uppercase;
    color: #383838;
}

.product-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    width: 90%;
    margin: 0 auto;
}

.product__item {
    margin-top: 10%;
    cursor: pointer;
    position: relative;
}

.product__item h1 {
    justify-content: center;
    font-family: 'Poppins' sans-serif;
    font-weight: 200;
    font-size: 1.2rem;
    margin-top: 7%; 
    padding-bottom: 4px;
} 

.product__item p {
    padding: 5px;
    cursor: pointer;
    position: relative;
}

.product__item img {
    width: 255px;
    height: 350px;
    object-fit: cover;
}

.product__img { 
    width: 100%;
    height: 100%;
}

.top-img {
    width: 100%;
    position: absolute;
    left: 0;
    top: 0;
    opacity: 0;
    transition: all 0.7s ease;
    margin-left: 33px;
}

.top-img:hover {
    opacity: 1;
}

/*----------------------Contact Page Styling-----------------------*/

.contactUs{
    position: relative;
    width: 100%;
    padding: 40px 100px;
    margin-top: 10%;
}

.title p {
    font-size: 8rem;
    color: #383838;
}

.title span {
    color: red;
}

.contact {
    padding: 40px;
    color: #383838;
    background-color: white;
}

.contact h1 {
    color: #383838;
    margin-bottom: 20px;
}

.contact-box {
    position: relative;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 5fr 4fr;
    grid-template-areas: 
    "form info"
    "form map";
    grid-gap: 20px;
    margin-top: 20px;
}

.contact h3 {
    color: #383838;
    font-weight: 500;
    font-size: 1.4rem;
    margin-bottom: 10px;
}

.form {
    grid-area: form;
}

.formBox {
    position: relative;
    width: 100%;
}

.formBox .row50 {
    display: flex;
    gap: 20px;
}

.formBox .row100 .inputBox {
    width: 100%;
}

.contact p {
    color: white;
}

.inputBox {
    display: flex;
    flex-direction: column;
    margin-bottom: 10px;
    width: 50%;
}

input {
    background-color: white;
}

.inputBox span {
    color: red;
    margin-top: 10px;
    margin-bottom: 10px;
    font-weight: 500;
    font-size: 1.1rem;
}

.inputBox input {
    padding: 10px;
    font-size: 1.1rem;
    outline: none;
    border: 1px solid #383838;
}

.inputBox textarea {
    font-family: sans-serif;
    padding: 10px;
    font-size: 1.1rem;
    outline: none;
    resize: none;
    min-height: 220px;
    margin-bottom: 10px;
}

.inputBox input[type="submit"] {
    background-color: #383838;
    color: whitesmoke;
    border: none;
    font-size: 1.1rem;
    max-width: 120px;
    font-weight: 500;
    cursor: pointer;
    padding: 14px 15px;
}

.inputBox input[type="submit"]:hover {
    color: #383838;
    background-color: white;
    border: 1px solid red;
    transition: ease 0.3s;
}

.inputBox ::placeholder {
    color: #999;
}
/* ... */

